--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
         // Initialize the socket connection
-        const socket = io('http://localhost:3000'); // Assuming your server is running on port 3000
+        const socket = io('http://localhost:3000'); 
 
         socket.on('connect', () => {
             console.log('Connected to server');
